fix for template v5

--- a/templates/scanpy_single_sample_analysis_v0.0.5.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.5.ipynb
@@ -48,7 +48,6 @@
     "      * [Embed the neighborhood graph using tSNE](#Embed-the-neighborhood-graph-using-tSNE)\n",
     "      * [Embed the neighborhood graph using Diffusion Map and Graph](#Embed-the-neighborhood-graph-using-Diffusion-Map-and-Graph)\n",
     "      * [Embed the neighborhood graph using PHATE](#Embed-the-neighborhood-graph-using-PHATE)\n",
-    "      * [Embed the neighborhood graph using PhenoGraph](#Embed-the-neighborhood-graph-using-PhenoGraph)\n",
     "    * [Finding marker genes](#Finding-marker-genes)\n",
     "      * [Stacked violin plot of ranked genes](#Stacked-violin-plot-of-ranked-genes)\n",
     "      * [Dot plot of ranked genes](#Dot-plot-of-ranked-genes)\n",
@@ -243,15 +242,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
     "\n",
     "### Doublet detection using Scrublet\n",
     "\n",
     "[<b>S</b>ingle-<b>C</b>ell <b>R</b>emover of Do<b>ublet</b>](https://github.com/swolock/scrublet) predicts cell doublets using a nearest-neighbor classifier of observed transcriptomes and simulated doublets."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -263,15 +262,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Plot doublet score histograms for observed transcriptomes and simulated doublets\n",
     "\n",
     "Scrublet tries to identify dublets using a threshold doublet score (ideally set at the minimum of the simulated doublet histogram).\n",
     "\n",
     "For more information, check this [tutorial notebook](https://github.com/swolock/scrublet/blob/master/examples/scrublet_basics.ipynb)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -429,13 +428,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
     "\n",
     "#### Ploting predicted doublets"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -445,7 +444,7 @@
    "source": [
     "adata.obs['predicted_doublet_str'] = adata.obs['predicted_doublet'].map(lambda x: 'dublets' if x else 'NA').astype(str)\n",
     "plt.rcParams['figure.figsize']=(8,6)\n",
-    "ax = sc.pl.scatter(adata, 'n_counts', 'n_genes', color='predicted_doublet_str',show=False,palette=sns.color_palette('colorblind'))\n",
+    "ax = sc.pl.scatter(adata, 'n_counts', 'n_genes', color='predicted_doublet_str',show=False,palette=sns.color_palette('colorblind'),size=40)\n",
     "ax.set_title('Predicted dublets', fontsize=12)\n",
     "ax.set_xlabel(\"Count depth\",fontsize=12)\n",
     "ax.set_ylabel(\"Number of genes\",fontsize=12)\n",
@@ -514,7 +513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = sc.pl.scatter(adata[adata.obs['n_counts']<10000], 'n_counts', 'n_genes', color='percent_mito',show=False)\n",
+    "ax = sc.pl.scatter(adata[adata.obs['n_counts']<10000], 'n_counts', 'n_genes', color='percent_mito',show=False,size=40)\n",
     "ax.set_title('Fraction mitochondrial counts', fontsize=12)\n",
     "ax.set_xlabel(\"Count depth\",fontsize=12)\n",
     "ax.set_ylabel(\"Number of genes\",fontsize=12)\n",
@@ -1200,13 +1199,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
     "\n",
     "#### Embed doublets using UMAP"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -1299,15 +1298,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
     "\n",
     "#### Embed the neighborhood graph using PHATE\n",
     "\n",
     "PHATE (Potential of Heat-diffusion for Affinity-based Trajectory Embedding) is a tool for visualizing high dimensional data. PHATE uses a novel conceptual framework for learning and visualizing the manifold to preserve both local and global distances. For more details, check [here](https://phate.readthedocs.io/en/stable/)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -1318,28 +1317,6 @@
     "sc.external.tl.phate(adata)\n",
     "plt.rcParams['figure.figsize']=(8,5)\n",
     "sc.external.pl.phate(adata,color='leiden',size=40,palette=cluster_colors)"
-   ]
-  },
-  {
-   "source": [
-    "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
-    "\n",
-    "#### Embed the neighborhood graph using PhenoGraph\n",
-    "\n",
-    "PhenoGraph is a clustering method designed for high-dimensional single-cell data. It works by creating a graph (“network”) representing phenotypic similarities between cells and then identifying communities in this graph."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc.external.tl.phenograph(adata,clustering_algo='leiden')\n",
-    "adata.obs['pheno_leiden'] = adata.obs['pheno_leiden'].astype(str)\n",
-    "sc.pl.umap(adata,color =\"pheno_leiden\",palette=cluster_colors,size=40)"
    ]
   },
   {
@@ -1889,7 +1866,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.write(output_h5ad, compression='gzip')"
+    "adata.write(output_h5ad)"
    ]
   },
   {
@@ -1910,7 +1887,7 @@
    "outputs": [],
    "source": [
     "cmd = \"\"\"\n",
-    "cbImportScanpy -n {{ SAMPLE_IGF_ID }} -i {{ SCANPY_H5AD }} -o {{ CELLBROWSER_DIR }} --clusterField leiden --htmlDir {{ CELLBROWSER_HTML_DIR }}\n",
+    "cbImportScanpy -n test -i scanpy.h5ad -o /mnt/c/Users/Avik/coding/test/scanpy_test/julia/test_v1.7.2/CELLBROWSER_DIR --clusterField leiden --htmlDir /mnt/c/Users/Avik/coding/test/scanpy_test/julia/test_v1.7.2/CELLBROWSER_HTML_DIR\n",
     "\"\"\"\n",
     "res = subprocess.check_call(cmd,shell=True)"
    ]
@@ -1958,7 +1935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
