added toggle for scrublet run

--- a/templates/scanpy_single_sample_analysis_v0.0.5.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.5.ipynb
@@ -97,7 +97,8 @@
     "cellranger_output_dir = '{{ CELLRANGER_COUNT_DIR }}'\n",
     "output_h5ad = '{{ SCANPY_H5AD }}'\n",
     "cell_marker_list = '{{ CELL_MARKER_LIST }}'\n",
-    "genome_build = '{{ GENOME_BUILD }}'"
+    "genome_build = '{{ GENOME_BUILD }}'\n",
+    "run_scrublet = True"
    ]
   },
   {
@@ -258,7 +259,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.external.pp.scrublet(adata)"
+    "if run_scrublet:\n",
+    "  sc.external.pp.scrublet(adata);\n",
+    "else:\n",
+    "  print('Skipping Scrublet analysis')"
    ]
   },
   {
@@ -278,7 +282,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.external.pl.scrublet_score_distribution(adata);"
+    "if run_scrublet:\n",
+    "  sc.external.pl.scrublet_score_distribution(adata);\n",
+    "else:\n",
+    "  print('Skipping Scrublet analysis')"
    ]
   },
   {
@@ -442,13 +449,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.obs['predicted_doublet_str'] = adata.obs['predicted_doublet'].map(lambda x: 'dublets' if x else 'NA').astype(str)\n",
-    "plt.rcParams['figure.figsize']=(8,6)\n",
-    "ax = sc.pl.scatter(adata, 'n_counts', 'n_genes', color='predicted_doublet_str',show=False,palette=sns.color_palette('colorblind'),size=40)\n",
-    "ax.set_title('Predicted dublets', fontsize=12)\n",
-    "ax.set_xlabel(\"Count depth\",fontsize=12)\n",
-    "ax.set_ylabel(\"Number of genes\",fontsize=12)\n",
-    "ax.tick_params(labelsize=12)"
+    "if run_scrublet:\n",
+    "  adata.obs['predicted_doublet_str'] = \\\n",
+    "    adata.obs['predicted_doublet'].\\\n",
+    "      map(lambda x: 'dublets' if x else 'NA').astype(str)\n",
+    "  plt.rcParams['figure.figsize']=(8,6)\n",
+    "  ax = sc.pl.scatter(\n",
+    "      adata,\n",
+    "      'n_counts',\n",
+    "      'n_genes',\n",
+    "      color='predicted_doublet_str',\n",
+    "      show=False,\n",
+    "      palette=sns.color_palette('colorblind'),size=40)\n",
+    "  ax.set_title('Predicted dublets', fontsize=12)\n",
+    "  ax.set_xlabel(\"Count depth\",fontsize=12)\n",
+    "  ax.set_ylabel(\"Number of genes\",fontsize=12)\n",
+    "  ax.tick_params(labelsize=12)\n",
+    "else:\n",
+    "  print('Skipping Scrublet analysis')"
    ]
   },
   {
@@ -1213,8 +1231,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.obs['predicted_doublet_str'] = adata.obs['predicted_doublet'].map(lambda x: 'dublets' if x else 'NA').astype(str)\n",
-    "sc.pl.umap(adata, color=['predicted_doublet_str'],use_raw=False,palette=cluster_colors,size=40)"
+    "if run_scrublet:\n",
+    "  adata.obs['predicted_doublet_str'] = \\\n",
+    "    adata.obs['predicted_doublet'].\\\n",
+    "      map(lambda x: 'dublets' if x else 'NA').astype(str)\n",
+    "  sc.pl.umap(\n",
+    "    adata,\n",
+    "    color=['predicted_doublet_str'],\n",
+    "    use_raw=False,\n",
+    "    palette=cluster_colors,\n",
+    "    size=40)\n",
+    "else:\n",
+    "  print('Skipping Scrublet analysis')"
    ]
   },
   {
@@ -1887,7 +1915,7 @@
    "outputs": [],
    "source": [
     "cmd = \"\"\"\n",
-    "cbImportScanpy -n test -i scanpy.h5ad -o /mnt/c/Users/Avik/coding/test/scanpy_test/julia/test_v1.7.2/CELLBROWSER_DIR --clusterField leiden --htmlDir /mnt/c/Users/Avik/coding/test/scanpy_test/julia/test_v1.7.2/CELLBROWSER_HTML_DIR\n",
+    "cbImportScanpy -n test -i scanpy.h5ad -o {{ CELLBROWSER_DIR }} --clusterField leiden --htmlDir {{ CELLBROWSER_HTML_DIR }}\n",
     "\"\"\"\n",
     "res = subprocess.check_call(cmd,shell=True)"
    ]
