added flag for hg38_hiv

--- a/templates/scanpy_single_sample_analysis_v0.0.5.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.5.ipynb
@@ -1526,7 +1526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if genome_build.upper() == 'HG38':\n",
+    "if genome_build.upper() in ['HG38','HG38_HIV'] :\n",
     "  print('Selecting human specific genes')\n",
     "  markers_df = df[(df['species'] == 'Hs') | (df['species'] == 'Mm Hs')]\n",
     "elif genome_build.upper() =='MM10':\n",
@@ -1769,7 +1769,7 @@
     "s_genes = cc_genes['S'].dropna()\n",
     "g2m_genes = cc_genes['G2.M'].dropna()\n",
     "\n",
-    "if genome_build.upper() == 'HG38':\n",
+    "if genome_build.upper() in ['HG38','HG38_HIV']:\n",
     "  print('Using human specific gene names')\n",
     "  s_genes = [gene.upper() for gene in s_genes]\n",
     "  g2m_genes = [gene.upper() for gene in g2m_genes]\n",
