--- a/templates/scanpy_single_sample_analysis_v0.0.5.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.5.ipynb
@@ -1915,7 +1915,7 @@
    "outputs": [],
    "source": [
     "cmd = \"\"\"\n",
-    "cbImportScanpy -n test -i scanpy.h5ad -o {{ CELLBROWSER_DIR }} --clusterField leiden --htmlDir {{ CELLBROWSER_HTML_DIR }}\n",
+    "cbImportScanpy -n {{ SAMPLE_IGF_ID }} -i {{ SCANPY_H5AD }} -o {{ CELLBROWSER_DIR }} --clusterField leiden --htmlDir {{ CELLBROWSER_HTML_DIR }}\n",
     "\"\"\"\n",
     "res = subprocess.check_call(cmd,shell=True)"
    ]
