--- a/templates/scvelo_basic_single_sample_v0.0.1.ipynb
+++ b/templates/scvelo_basic_single_sample_v0.0.1.ipynb
@@ -796,7 +796,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = adata.obs.groupby('leiden')[keys].mean().T\n",
+    "df = adata.obs.groupby('leiden')['velocity_length', 'velocity_confidence'].mean().T\n",
     "df.style.background_gradient(cmap='coolwarm', axis=1)"
    ]
   },
