--- a/templates/scanpy_single_sample_analysis_v0.0.6.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.6.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var_name = 'gene_symbols'\n",
+    "var_names = 'gene_symbols'\n",
     "# for ARABIDOPSIS TAIR10\n",
     "if genome_build == 'TAIR10':\n",
     "    var_names = 'gene_ids'\n",
@@ -1498,10 +1498,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\r\n",
-    "\r\n",
-    "### Finding marker genes\r\n",
-    "\r\n",
+    "<div align=\"right\"><a href=\"#Table-of-contents\">Go to TOC</a></div>\n",
+    "\n",
+    "### Finding marker genes\n",
+    "\n",
     "Let us compute a ranking for the highly differential genes in each cluster. For this, by default, the `.raw` attribute of AnnData is used in case it has been initialized before. The simplest and fastest method to do so is the t-test."
    ]
   },
