minor fix for missing cellcycle genes

--- a/templates/scvelo_basic_single_sample_v0.0.2.ipynb
+++ b/templates/scvelo_basic_single_sample_v0.0.2.ipynb
@@ -718,44 +718,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if score_cell_cycle_genes:\n",
-    "    s_genes, g2m_genes = \\\n",
-    "        scv.utils.get_phase_marker_genes(adata)\n",
-    "    s_genes = \\\n",
-    "        scv.get_df(\n",
-    "            adata[:, s_genes],\n",
-    "            'spearmans_score',\n",
-    "            sort_values=True).index\n",
-    "    g2m_genes = \\\n",
-    "        scv.get_df(\n",
-    "            adata[:, g2m_genes],\n",
-    "            'spearmans_score',\n",
-    "            sort_values=True).index\n",
-    "\n",
-    "    kwargs = \\\n",
-    "        dict(\n",
-    "            frameon=False,\n",
-    "            ylabel='cell cycle genes',\n",
-    "            color='leiden',\n",
-    "            ncols=3,\n",
+    "try:\n",
+    "    if score_cell_cycle_genes:\n",
+    "        s_genes, g2m_genes = \\\n",
+    "            scv.utils.get_phase_marker_genes(adata)\n",
+    "        s_genes = \\\n",
+    "            scv.get_df(\n",
+    "                adata[:, s_genes],\n",
+    "                'spearmans_score',\n",
+    "                sort_values=True).index\n",
+    "        g2m_genes = \\\n",
+    "            scv.get_df(\n",
+    "                adata[:, g2m_genes],\n",
+    "                'spearmans_score',\n",
+    "                sort_values=True).index\n",
+    "        kwargs = \\\n",
+    "            dict(\n",
+    "                frameon=False,\n",
+    "                ylabel='cell cycle genes',\n",
+    "                color='leiden',\n",
+    "                ncols=3,\n",
+    "                dpi=150)\n",
+    "        print(\"Scatter plots for cell cycle genes:\")\n",
+    "        scv.pl.scatter(\n",
+    "            adata,\n",
+    "            list(s_genes[:5]) + list(g2m_genes[:5]),\n",
+    "            **kwargs)\n",
+    "        print(\"Velocity plots for cell cycle genes:\")\n",
+    "        scv.pl.velocity(\n",
+    "            adata,\n",
+    "            list(s_genes[:5]) + list(g2m_genes[:5]),\n",
+    "            ncols=1,\n",
+    "            add_outline=True,\n",
     "            dpi=150)\n",
-    "    scv.pl.scatter(adata, list(s_genes[:5]) + list(g2m_genes[:5]), **kwargs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4cd6a941-de5f-4626-a3d6-7b592b69486c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if score_cell_cycle_genes:\n",
-    "    scv.pl.velocity(\n",
-    "        adata,\n",
-    "        list(s_genes[:5]) + list(g2m_genes[:5]),\n",
-    "        ncols=1,\n",
-    "        add_outline=True,\n",
-    "        dpi=150)"
+    "except:\n",
+    "    print('Skipping cell cycle genes')"
    ]
   },
   {
