--- a/templates/scvelo_basic_single_sample_v0.0.2.ipynb
+++ b/templates/scvelo_basic_single_sample_v0.0.2.ipynb
@@ -681,8 +681,11 @@
     "else:\n",
     "    if genome_build in ('HG38', 'MM10', 'MM39'):\n",
     "        print('Using predefined cell cycle genes')\n",
-    "        scv.tl.score_genes_cell_cycle(adata, s_genes=None, g2m_genes=None)\n",
-    "        score_cell_cycle_genes = True\n",
+    "        try:\n",
+    "            scv.tl.score_genes_cell_cycle(adata, s_genes=None, g2m_genes=None)\n",
+    "            score_cell_cycle_genes = True\n",
+    "        except:\n",
+    "            print('Skipping cell cycle scoring. Could not load cell cycle genes')\n",
     "    else:\n",
     "        logging.warning(\"Skipping step for cell cycle genes scoring\")"
    ]
