--- a/templates/scanpy_single_sample_analysis_v0.0.6.2.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.6.2.ipynb
@@ -2142,7 +2142,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.12 ('airflow_v2')",
    "language": "python",
    "name": "python3"
   },
@@ -2156,7 +2156,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5dc28c47cd4e8e1eb83858cc79a337f07bb58f1ab996ade481ad76b632e28081"
+   }
   }
  },
  "nbformat": 4,
