mtx path checking for multi and count output

--- a/templates/scanpy_single_sample_analysis_v0.0.6.3.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.6.3.ipynb
@@ -172,9 +172,19 @@
     "# for ARABIDOPSIS TAIR10\n",
     "if genome_build == 'TAIR10':\n",
     "    var_names = 'gene_ids'\n",
+    "multi_matrix_dir = \\\n",
+    "    os.path.join(cellranger_output_dir, 'sample_filtered_feature_bc_matrix')\n",
+    "count_matrix_dir = \\\n",
+    "    os.path.join(cellranger_output_dir, 'filtered_feature_bc_matrix')\n",
+    "if os.path.exists(multi_matrix_dir):\n",
+    "    mxt_path = multi_matrix_dir\n",
+    "elif os.path.exists(count_matrix_dir):\n",
+    "    mtx_path = count_matrix_dir\n",
+    "else:\n",
+    "    raise IOError(f\"Failed to get matrix files at {cellranger_output_dir}\")\n",
     "adata = \\\n",
     "    sc.read_10x_mtx(\n",
-    "        os.path.join(cellranger_output_dir, 'sample_filtered_feature_bc_matrix'),\n",
+    "        mtx_path,\n",
     "        var_names=var_names,\n",
     "        cache=True)"
    ]
