--- a/templates/scanpy_single_sample_analysis_v0.0.6.3.ipynb
+++ b/templates/scanpy_single_sample_analysis_v0.0.6.3.ipynb
@@ -177,7 +177,7 @@
     "count_matrix_dir = \\\n",
     "    os.path.join(cellranger_output_dir, 'filtered_feature_bc_matrix')\n",
     "if os.path.exists(multi_matrix_dir):\n",
-    "    mxt_path = multi_matrix_dir\n",
+    "    mtx_path = multi_matrix_dir\n",
     "elif os.path.exists(count_matrix_dir):\n",
     "    mtx_path = count_matrix_dir\n",
     "else:\n",
